--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
 <body>
 	<h1>Question list admin site</h1>
-
+	<form th:action="@{/logout}" method="post">
+		<input type="submit" value="Log out">
+	</form>
+	<div class="list">
+		<table class="table table-stripped">
+			<tr>
+				<th>ID</th>
+				<th>Question</th>
+				<th>Question type</th>
+			</tr>
+			<tr th:each="question : ${questions}">
+				<td th:text="${question.id}"></td>
+				<td th:text="${question.question}"></td>
+				<td th:text="${question.questionType}"></td>
+			</tr>
+		</table>
+	</div>
 </body>
 </html>
