--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+      
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="ISO-8859-1" content="text/html; charset=UTF-8" />
+	<title>666xxx</title>
 </head>
 <body>
-
+	<div class="add">
+		<div class="row">
+        	<div class="col-md-6 col-md-offset-3">
+			<h3>add question</h3>
+				<form th:object="${question}" th:action="@{save}" action="#" method="post">
+					<label for="question">Question</label>
+					<input type="text" id="question" th:field="*{question}" class="form-control"/>
+					
+					<label for="type">Type</label>
+					<select class="form-control" id="type" th:field="*{questionType}" >
+						<option th:each="questionType : ${questionTypes}" th:value="${questionType.typeId}" th:text="${questionType.type}"></option>
+					</select>
+					
+					<div class="save">
+						<button type="submit" class="btn btn-primary">Save</button>
+					</div>
+					
+						<div class="cancel">
+							<a href="#" th:href="@{/questionList}" role="button">Cancel</a>
+						</div>
+				</form>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
