--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -24,8 +24,14 @@
 				<td th:text="${question.id}"></td>
 				<td th:text="${question.question}"></td>
 				<td th:text="${question.questionType}"></td>
+				<td><a th:href="@{/edit/{id}(id=${question.id})}" class="edit" method="get"></a></td>
+				<td><a th:href="@{/delete/{id}(id=${question.id})}" class="delete" method="get"></a></td>
+				
 			</tr>
 		</table>
 	</div>
+	<div class="addbtn">
+			<a th:href="@{/add}" class="btn btn-success"></a>
+		</div>
 </body>
 </html>
