--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -6,7 +6,7 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <head>
 	<meta charset="ISO-8859-1" content="text/html; charset=UTF-8" />
-	<title>666xxx</title>
+	<title>666xxxx</title>
 </head>
 <body>
 	<div class="add">
