--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -26,8 +26,8 @@
 				<td th:text="${question.id}"></td>
 				<td th:text="${question.question}"></td>
 				<td th:text="${question.questionType}"></td>
-				<td><a th:href="@{/edit/{id}(id=${question.id})}" class="edit" method="get"></a></td>
-				<td><a th:href="@{/delete/{id}(id=${question.id})}" class="delete" method="get"></a></td>
+				<td><a th:href="@{/edit/{id}(id=${question.id})}" class="btn-success edit" method="get"></a></td>
+				<td><a th:href="@{/delete/{id}(id=${question.id})}" class="btn btn-danger delete" method="get"></a></td>
 				
 			</tr>
 		</table>
