--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -25,15 +25,15 @@
 			<tr th:each="question : ${questions}">
 				<td th:text="${question.id}"></td>
 				<td th:text="${question.question}"></td>
-				<td th:text="${question.questionType}"></td>
-				<td><a th:href="@{/edit/{id}(id=${question.id})}" class="btn-success edit" method="get"></a></td>
-				<td><a th:href="@{/delete/{id}(id=${question.id})}" class="btn btn-danger delete" method="get"></a></td>
+				<td th:text="${question.questionType.type}"></td>
+				<td><a th:href="@{/edit/{id}(id=${question.id})}" class="btn-success edit" method="get">Edit</a></td>
+				<td><a th:href="@{/delete/{id}(id=${question.id})}" class="btn btn-danger delete" method="get">Delete</a></td>
 				
 			</tr>
 		</table>
 	</div>
 	<div class="addbtn">
-			<a th:href="@{/add}" class="btn btn-success"></a>
+			<a th:href="@{/add}" class="btn btn-success">Add question</a>
 		</div>
 </body>
 </html>
