--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -18,8 +18,8 @@
 					<label for="id">Question ID</label>
 					<input type="text" id="id" th:field="*{id}" class="form-control"/>
 				
-					<label for="question">Question</label>
-					<input type="text" id="question" th:field="*{question}" class="form-control"/>
+					<label for="questionText">Question</label>
+					<input type="text" id="questionText" th:field="*{questionText}" class="form-control"/>
 					
 					<label for="type">Type</label>
 					<select class="form-control" id="type" th:field="*{questionType}" >
