--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -26,6 +26,14 @@
 						<option th:each="questionType : ${types}" th:value="${questionType.typeId}" th:text="${questionType.type}"></option>
 					</select>
 					
+					<label for="responseOptions">Response Options</label>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					
+					
 					<div class="save">
 						<button type="submit" class="btn btn-primary">Save</button>
 					</div>
