edit page added

--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -20,7 +20,7 @@
 					<input type="text" id="id" th:field="*{id}" class="form-control"/>
 				
 					<label for="question">Question</label>
-					<input type="text" id="question" th:field="*{question}" class="form-control"/>
+					<input type="text" id="question" th:field="*{questionText}" class="form-control"/>
 					
 					<label for="type">Type</label>
 					<select class="form-control" id="type" th:field="*{questionType}" >
