--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -27,12 +27,13 @@
 						<option th:each="questionType : ${types}" th:value="${questionType.typeId}" th:text="${questionType.type}"></option>
 					</select>
 					
-					<label for="responseOptions">Response Options</label>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+				<table class="table table-stripped">
+				<tr th:each="responseOption : ${responseOptions}">
+					<td th:text="${responseOption}"><td>
+				</tr>
+				</table>
+					
+		
 					
 					<div class="save">
 						<button type="submit" class="btn btn-primary">Save</button>
