--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" />
 
 <head>
     <title>Login</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" />
-  
-  <style>
-  
-  .signin {
- 
-   text-align: center;
-   margin-top: 10%;
-    
-}
-  </style>
-  
+	<link type="text/css" rel="stylesheet" href="/css/login.css" th:href="@{css/login.css}" />
 </head>
 
 <body>
@@ -29,12 +19,18 @@ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<div th:if="${param.logout}">
             You have been logged out.
         </div>
+        
+        <div class="container login-container">
+		 <div class="col-md-6 login-form">
+		 	<h3>Admin Login</h3>
+				<form th:action="@{/login}" method="post">
+					<div class="form-group"><input type="text" class="form-control" name="username" placeholder="Username" /></div>
+					<div class="form-group"><input type="password" class="form-control" name="password" placeholder="Password" /></div>
+					<div class="form-group"><input type="submit" class="btn btn-success" value="Sign In"/></div>
+				</form>
+			</div>
+		</div>
 		
-		<form th:action="@{/login}" method="post">
-			<div><label> User Name: <input type="text" name="username"/> </label></div>
-			<div><label> Password: <input type="password" name="password"/> </label></div>
-			<div><input type="submit" class="btn btn-success" value="Sign In"/></div>
-		</form>
 	</div>
 </body>
 </html>
