--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -11,7 +11,7 @@
 <body>
 	<h1>Question list admin site</h1>
 	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Log out">
+		<input type="submit" value="Log out" class="btn btn-danger">
 	</form>
 	<div class="list">
 		<table class="table table-stripped">
