--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,11 +1,8 @@
 @charset "ISO-8859-1";
 
 .signin {
-   position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -50px;
-  margin-left: -100px;
+	margin: auto;
+	
  
 }
 .login-container{
