--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -6,7 +6,7 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <head>
 	<meta charset="ISO-8859-1" content="text/html; charset=UTF-8" />
-	<title>titties</title>
+	<title>Edit Question</title>
 </head>
 <body>
 	<div class="add">
@@ -27,14 +27,9 @@
 						<option th:each="questionType : ${types}" th:value="${questionType.typeId}" th:text="${questionType.type}"></option>
 					</select>
 					
-				<table class="table table-stripped">
-				<tr th:each="responseOption : ${responseOptions}">
-					<td th:text="${responseOption}"><td>
-				</tr>
-				</table>
-					
-		
-					
+					<label for="responseOptions">Response Options</label>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+										
 					<div class="save">
 						<button type="submit" class="btn btn-primary">Save</button>
 					</div>
