Added extra inputs

--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -32,6 +32,14 @@
 					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
 					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
 					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
 					
 					
 					<div class="save">
