--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -5,6 +5,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <head>
+	<link type="text/css" rel="stylesheet" href="/css/edit.css" th:href="@{css/edit.css}" />
 	<meta charset="ISO-8859-1" content="text/html; charset=UTF-8" />
 	<title>titties</title>
 </head>
