--- a/src/main/resources/templates/addQuestion.html
+++ b/src/main/resources/templates/addQuestion.html
@@ -12,7 +12,7 @@
 	<div class="add">
 		<div class="row">
         	<div class="col-md-6 col-md-offset-3">
-			<h3>add question</h3>
+			<h3>Add Question</h3>
 				<form th:object="${question}" th:action="@{save}" action="#" method="post">
 				
 					<label for="id">Question ID</label>
