--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -6,10 +6,10 @@
 	
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>The Admin Page</title>
 </head>
 <body>
-	<h1>Question list admin site</h1>
+	<h1>Question List Admin Site</h1>
 	<form th:action="@{/logout}" method="post">
 		<input type="submit" value="Log out" class="btn btn-danger">
 	</form>
