--- a/src/main/resources/static/css/edit.css
+++ b/src/main/resources/static/css/edit.css
@@ -1,5 +1,11 @@
-@charset "ISO-8859-1";
-
-#type{
-	height: 300px;
+.response{
+width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
 }
