--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -5,7 +5,7 @@
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <head>
-	<link type="text/css" rel="stylesheet" href="/css/edit.css" th:href="@{css/edit.css}" />
+	<link type="text/css" rel="stylesheet" href="/css/edit.css" th:href="@{/css/edit.css}" />
 	<meta charset="ISO-8859-1" content="text/html; charset=UTF-8" />
 	<title>Edit Question</title>
 </head>
@@ -29,7 +29,7 @@
 					</select>
 					
 					<label for="responseOptions">Response Options</label>
-					<input type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control"/>
+					<textarea type="text" id="responseOptions" th:field="*{responseOptions}" class="form-control response"></textarea>
 										
 					<div class="save">
 						<button type="submit" class="btn btn-primary">Save</button>
